added: c65xx project!

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Projects</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./projets/projects.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
     
@@ -13,7 +14,7 @@
         <li class="nav-item">
           <div>
             <span class="nav-item-name">
-              <a class="nav-item-link" href="./">Home</a>
+              <a class="nav-item-link" href="../index.html">Home</a>
             </span>
           </div>
         </li>
@@ -21,7 +22,7 @@
         <li class="nav-item">
           <div>
             <span class="nav-item-name">
-              <a class="nav-item-link" href="./projects">Projects</a>
+              <a class="nav-item-link" href="./index.html">Projects</a>
             </span>
           </div>
         </li>
@@ -34,8 +35,13 @@
       <ul class="project-list">
         <li class="project-item">
           <div>
+            <div class="github-repo">
+              <span class="github-repo-name">
+                <a class="github-repo-link" href="https://github.com/miccra2/c65xx">Github</a>
+              </span>
+            </div>
             <span class="project-name">
-              <a class="project-link" href="./projects/c65xx">C65xx</a>: A 6502/6510 emulator for the c64 and a 6502 assembler!
+              <a class="project-link" href="./c65xx/index.html">C65xx</a>: A 6502/6510 emulator for the c64 and a 6502 assembler!
             </span>
           </div>
         </li>
