--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Miccra2</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
 
