--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@
               </span>
             </div>
             <span class="project-name">
-              <a class="project-link" href="./c65xx/index.html">C65xx</a>: A 6502/6510 emulator for the c64 and a 6502 assembler!
+              <a class="project-link" href="./c65xx/index.html">C65xx</a>: A 6502/6510 emulator and a 65xx assembler for the c64!
             </span>
           </div>
         </li>
