--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="nav-item">
           <div>
             <span class="nav-item-name">
-              <a class="nav-item-link" href="./index.html">Home</a>
+              <a class="nav-item-link" href="https://github.com/miccra2/miccra2.github.io/index.html">Home</a>
             </span>
           </div>
         </li>
