added: link from local to real page in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li class="nav-item">
           <div>
             <span class="nav-item-name">
-              <a class="nav-item-link" href="https://github.com/miccra2/miccra2.github.io/index.html">Home</a>
+              <a class="nav-item-link" href="./index.html">Home</a>
             </span>
           </div>
         </li>
@@ -31,7 +31,7 @@
 
     <section id="intro">
       <h1 class="user-name">
-        <a href="index.html">Miccra2</a>
+        <a href="https://github.com/miccra2/miccra2.github.io">Miccra2</a>
       </h1>
       <p class="introduction">Hi! My name is Michel Föhre. I'm also known as Michcrafter1003 and Miccra2! And I'm interested in coding!</p>
     </section>
