--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="intro">
       <h1 class="user-name">
-        <a href="https://github.com/miccra2/miccra2.github.io">Miccra2</a>
+        <a href="https://miccra2.github.io">Miccra2</a>
       </h1>
       <p class="introduction">Hi! My name is Michel Föhre. I'm also known as Michcrafter1003 and Miccra2! And I'm interested in coding!</p>
     </section>
